@@ -516,6 +516,11 @@ name|CONTAINER_LAUNCHED
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|boolean
+name|notInterrupted
+init|=
+literal|true
+decl_stmt|;
 try|try
 block|{
 name|File
@@ -606,7 +611,32 @@ name|e
 argument_list|)
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Interrupted while waiting for exit code from "
+operator|+
+name|containerId
+argument_list|)
+expr_stmt|;
+name|notInterrupted
+operator|=
+literal|false
+expr_stmt|;
+block|}
 finally|finally
+block|{
+if|if
+condition|(
+name|notInterrupted
+condition|)
 block|{
 name|this
 operator|.
@@ -655,6 +685,7 @@ operator|+
 name|containerId
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 if|if
